Fix T44762: Materials flicker in edit-mode